--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,8 @@
     "SenderEmail": "hoangploc007@gmail.com",
     "SenderName": "Support",
     "AppPassword": "eypd opps mwrw sgiv"
-  }
+  },
+  "Path": {
+    "Link": "https://fe04-171-243-48-199.ngrok-free.app"
+  } 
 }
