--- a/DAM_Upload.csproj
+++ b/DAM_Upload.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspose.Words" Version="25.3.0" />
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
