Update api get file

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,7 +16,7 @@
     "Password": "eypd opps mwrw sgiv"
   },
   "Path": {
-    "Link": "https://10f9-171-243-49-1.ngrok-free.app"
+    "Link": "https://294f-171-243-48-126.ngrok-free.app"
   },
   "Kafka": {
     "BootstrapServers": "pkc-619z3.us-east1.gcp.confluent.cloud:9092",
